--- a/MediPlus/MediPlus.BL/MediPlus.BL.csproj
+++ b/MediPlus/MediPlus.BL/MediPlus.BL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MediPlus.DAL\MediPlus.DAL.csproj" />
   </ItemGroup>
 
